Revert "updated css and readme"

--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -70,8 +70,9 @@ a {
 }
 
 .new-post a {
+  background-color: black;
   border-radius: 6px;
-  padding: 4px 8px 4px 0;
+  padding: 4px 8px;
   color: $red;
 }
 
