--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,6 @@
 <%= form_for @post do |form| %>
-  <div>
-    <%= form.label :message, "Tell the world..", class: "new-post-label"%>
-  </div>
-  <div>
-  <%= form.text_area :message, size: "50%x3" %>
-  </div>
-  <div>
-  <%= form.submit "Submit", class: "new-post-submit" %>
-  </div>
+  <%= form.label :message %>
+  <%= form.text_area :message %>
+
+  <%= form.submit "Submit" %>
 <% end %>
